# rumba

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  justfile  make_data.py  make_graph.py  make_rumba_csv.py
bindings/c/: Cargo.toml  cbindgen.toml  package.sh
bindings/c/csrc/: rumba.cpp
bindings/c/include/: rumba.h  rumba.hpp
bindings/c/src/: lib.rs  pool.rs
bindings/python/: Cargo.toml  README.md  pyrumba.pyi
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: bench.rs
core/src/: bimap.rs  expr.pest  expr.rs  jit.rs  lang.rs  lib.rs  parser.rs  reduce.rs  simplify.rs  varint.rs
core/tests/: test.rs  test_jit.rs
