[package]
name = "rumba"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for MBA (Mixed Boolean-Arithmetic) expression simplification"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
rumba-core = { workspace = true, features = ["parse"] }
rand = "0.9.2"

[features]
jit = ["rumba-core/jit"]
