[package]
name = "rumba-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for MBA (Mixed Boolean-Arithmetic) expression simplification"

[dependencies]
log = "0.4.28"
rand = "0.9.2"
cranelift = { version = "0.125.4", optional = true }
memmap2 = { version = "0.9.9", optional = true }
pest = { version = "2.8.2", optional = true }
pest_derive = { version = "2.8.2", optional = true }
target-lexicon = { version = "0.13.3", optional = true }
indexmap = "2.12.1"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

[features]
parse = ["pest", "pest_derive"]
jit = ["cranelift", "memmap2", "target-lexicon"]
