[package]
name = "c"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "C bindings for the rumba MBA simplification library"

[dependencies]
rumba-core = { workspace = true }

[lib]
name = "rumbac"
crate-type = ["cdylib"]

[features]
jit = ["rumba-core/jit"]
parse = ["rumba-core/parse"]
