[package]
name = "pyrumba"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for the rumba MBA simplification library"

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
rumba-core = { workspace = true }

[lib]
name = "pyrumba"
crate-type = ["cdylib"]

[features]
jit = ["rumba-core/jit"]
parse = ["rumba-core/parse"]
