[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
rumba-core = { path = "../../core", features = [] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde = "1.0.226"
console_log = "1.0.0"
log = "0.4.28"


[lib]
name = "wasm"
crate-type = ["cdylib"]

[features]
jit = ["rumba-core/jit"]
parse = ["rumba-core/parse"]
