[package]
name = "wasm"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the rumba MBA simplification library"

[dependencies]
rumba-core = { workspace = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde = "1.0.226"
console_log = "1.0.0"
log = "0.4.28"


[lib]
name = "wasm"
crate-type = ["cdylib"]

[features]
jit = ["rumba-core/jit"]
parse = ["rumba-core/parse"]
